--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				</section>
 				<section>
 					<p>
-						Uma comunidade backend que une desenvolvedores do Brasil inteiro para gerar conhecimento e trocar de informações.
+						A comunidade Back-End BR une desenvolvedore(a)s Back-End,
+						que tenham qualquer conhecimento, para discutir, trazer suas dúvidas e trocar conhecimento entre si.
 					</p>
 				</section>
 				<section>
