--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 					Sejam bem vindo todos ao Backend Brasil uma comunidade para todos.
 				</section>
 				<section>
-					<p>Com apoio de LuizaLabs</p>
+					<p>Com apoio da Concrete Solutions</p>
 
- 						<img src="https://thumb.lovemondays.com.br/image/1d2e6b413ce34604a76c45ac88bb329c/logos/3ab3db/luiza-labs.png" width="350"  style="border: 0px;box-shadow:none;"/>
+					<img src="https://thumb.lovemondays.com.br/image/096106d41e8d443e964f45fae4a30cb7/logos/93e6a6/concrete-solutions.gif" width="350"  style="border: 0px;box-shadow:none;"/>
 				</section>
 				<section>
 					<h3 style="margin-bottom:30px;">Tenham um ótimo evento!</h3>
