--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
 					</p>
 				</section>
 				<section>
+					<img src="https://www.codamos.club/images/logo.png" width="350" style="border: 0px;box-shadow:none;"/>
+				</section>
+				<section>
+					<p>
+						O Codamos é como uma vitrine de eventos, meetups, cursos, workshops, palestras e palestrantes, aqui, você pode achar eventos inclusivos. Nosso propósito é descomplicar a comunicação entre quem organiza e quem quer participar de eventos. As pessoas são nossa essência, estão em primeiro lugar e fazemos o nosso melhor para reconhecer, valorizar e respeitar a pluralidade.					
+					</p>
+				</section>
+				<section>
 					Sejam bem vindo todos ao Backend Brasil uma comunidade para todos.
 				</section>
 				<section>
