atualizando logos para o meetup 7

--- a/index.html
+++ b/index.html
@@ -78,25 +78,22 @@
 					</p>
 				</section>
 				<section>
-					<img src="https://www.codamos.club/images/logo.png" width="350" style="border: 0px;box-shadow:none;"/>
+					<img src="https://secure.meetupstatic.com/photos/event/4/c/1/6/600_468139478.jpeg" width="350" style="border: 0px;box-shadow:none;"/>
 				</section>
 				<section>
 					<p>
-						O Codamos é como uma vitrine de eventos, meetups, cursos, workshops, palestras e palestrantes, aqui, você pode achar eventos inclusivos. Nosso propósito é descomplicar a comunicação entre quem organiza e quem quer participar de eventos. As pessoas são nossa essência, estão em primeiro lugar e fazemos o nosso melhor para reconhecer, valorizar e respeitar a pluralidade.					
+						O NerdGirlz (NerdZão) é um grupo de estudos gratuito com sede em São Paulo. O foco principal do grupo é promover o networking e disseminar o conhecimento em softwares, plataformas, tecnologias e linguagens de programação de forma divertida, quebrando o paradigma de complexidade no aprendizado.					
 					</p>
 				</section>
 				<section>
-					Sejam bem vindo todos ao Backend Brasil uma comunidade para todos.
-				</section>
-				<section>
-					<p>Com apoio da Concrete Solutions</p>
+					<p>Com apoio da IdWall</p>
 
 					<img src="https://thumb.lovemondays.com.br/image/096106d41e8d443e964f45fae4a30cb7/logos/93e6a6/concrete-solutions.gif" width="350"  style="border: 0px;box-shadow:none;"/>
 				</section>
 				<section>
 					<h3 style="margin-bottom:30px;">Tenham um ótimo evento!</h3>
 
-					<img src="https://avatars2.githubusercontent.com/u/30732658" style="border: 0px;box-shadow:none;margin-bottom:20px;" width="300"/>
+					<img src="https://idwall.co/img/logo-idwall-black.png" style="border: 0px;box-shadow:none;margin-bottom:20px;" width="300"/>
 
 					<h5 style="font-size: 22px;">Umuntu ngumuntu ngabantu</h5>
 					<h6 style="font-size: 16px;">Eu sou porque nós somos!</h6>
