--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<section>
 					<p>Com apoio da IdWall</p>
 
-					<img src="https://thumb.lovemondays.com.br/image/096106d41e8d443e964f45fae4a30cb7/logos/93e6a6/concrete-solutions.gif" width="350"  style="border: 0px;box-shadow:none;"/>
+					<img src="https://avatars2.githubusercontent.com/u/30732658" width="350"  style="border: 0px;box-shadow:none;"/>
 				</section>
 				<section>
 					<h3 style="margin-bottom:30px;">Tenham um ótimo evento!</h3>
