--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 				<section>
 					<p>Com apoio da IdWall</p>
 
-					<img src="https://avatars2.githubusercontent.com/u/30732658" width="350"  style="border: 0px;box-shadow:none;"/>
+					<img src="https://idwall.co/img/logo-idwall-black.png" width="350"  style="border: 0px;box-shadow:none;"/>
 				</section>
 				<section>
 					<h3 style="margin-bottom:30px;">Tenham um ótimo evento!</h3>
 
-					<img src="https://idwall.co/img/logo-idwall-black.png" style="border: 0px;box-shadow:none;margin-bottom:20px;" width="300"/>
+					<img src="https://avatars2.githubusercontent.com/u/30732658" style="border: 0px;box-shadow:none;margin-bottom:20px;" width="300"/>
 
 					<h5 style="font-size: 22px;">Umuntu ngumuntu ngabantu</h5>
 					<h6 style="font-size: 16px;">Eu sou porque nós somos!</h6>
