--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 					<h3>Parceiros</h3>
 				</section>
 				<section>
-					<img src="http://quebradev.com.br/images/logo.png" width="350" style="border: 0px;box-shadow:none;"/>
+					<img src="https://i1.sndcdn.com/avatars-000504656790-m8b4ne-t200x200.jpg" width="350" style="border: 0px;box-shadow:none;"/>
 				</section>
 				<section>
 					<p>
-						O QuebraDev é um podcast de origem periférica que surgiu com o objetivo de representar quem é de quebrada na área de tecnologia, além de tentar trazer para o cerne dessa profissão quem tem interesse em ingressar (priorizando o diálogo com quem é de quebrada).
+						O QuebraDev é um movimento social que visa democratizar a informação a periferia.
 					</p>
 				</section>
 				<section>
